# seal-photo-identification

./: .coverage  .coveragerc  .gitignore  README.md  coverage.xml  database_merge.py  docker-compose.yml  package-lock.json  package.json  path_to_temp_storage  pyproject.toml  pytest.ini  seal_center_db.sql  sealcenter.db  sonar_commands.txt  unittest_detection.py  wildbook_test.py  wildbook_upload.py
.scannerwork/: report-task.txt
MVP/src/backend/: app.py
legacy_database/: IDfield_ToExcel.csv  database_merge.py  merged_file.csv  merged_file.xlsx  new_merged_file.xlsx
legacy_database/new/008-1605/: Export_Database-1716733322281.xlsx
services/backend/: Dockerfile  requirements.txt  seal_schema.sql  sealcenter.db
services/backend/src/: constants.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py  wildbook.py
services/frontend/: Dockerfile  package-lock.json  package.json
services/frontend/src/: App.vue  main.js
src/backend/: app.py
src/backend/templates/: landing_page.html
src/backend/wrappers/: Docker.py  Wildbook.py
src/frontend/static/: swagger.json
src/frontend/templates/: AddSighting.html  confirmation.html  landing_page.html  list_seals.html  menu.html  seal_form.html  upload_image.html
src/wrappers/: Wildbook.py
tests/: test.db  unittest_main.py  unittest_seal.py
tests/unit/: test_API.py  test_DB.py  test_constants.py  test_encounter_crud.py  test_encounters.py  test_exceptions.py  test_export.py  test_main.py  test_schemas.py  test_seal_crud.py  test_seals.py  test_sighting_crud.py  test_sightings.py
(+42 files in other folders)
