[tool.poetry]
name = "sealcentre-photo-identification"
version = "0.1.0"
description = ""
authors = ["LucasCiziks <lucas.ciziks@loft.com.br>"]
readme = "README.md"
packages = [{include = "sealcentre_photo_identification"}]

[tool.poetry.dependencies]
python = "3.10.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
