[tool.poetry]
name = "sealcentre-photo-identification"
version = "0.1.0"
description = ""
authors = ["LucasCiziks <lucas.ciziks@loft.com.br>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.12"
requests = "^2.31.0"
docker = "^7.0.0"
flask = "^3.0.2"
antidote = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
